#409: Move all configuration into inner classes of AppConfigurationProperties, remove repository definitions from application.yaml.